--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
+    "dev": "node ./contentImporter.js && nuxt dev",
+    "generate": "node ./contentImporter.js && nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
@@ -15,7 +15,7 @@
     "@pinia/nuxt": "^0.11.0",
     "@vimeo/player": "^2.27.1",
     "axios": "^1.9.0",
-    "contentful": "^11.5.16",
+    "@directus/sdk": "^10.3.3",
     "dotenv": "^16.5.0",
     "eslint": "^9.25.1",
     "nuxt": "^3.16.2",
