--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@directus/sdk": "^10.3.3",
     "@nuxt/content": "^3.5.1",
     "@nuxt/eslint": "^1.3.0",
     "@nuxt/test-utils": "^3.17.2",
+    "@nuxtjs/robots": "^5.5.1",
+    "@nuxtjs/sitemap": "^7.4.3",
     "@pinia/nuxt": "^0.11.0",
     "@vimeo/player": "^2.27.1",
     "axios": "^1.9.0",
-    "@directus/sdk": "^10.3.3",
     "dotenv": "^16.5.0",
     "eslint": "^9.25.1",
     "nuxt": "^3.16.2",
