--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.5.0",
     "eslint": "^9.25.1",
     "nuxt": "^3.16.2",
+    "nuxt-gtag": "^4.0.0",
     "pinia": "^3.0.2",
     "rimraf": "^6.0.1",
     "vue": "^3.5.13",
